Fixes accounts mark
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1691 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -18,6 +18,7 @@ __minimum__:
   - company::user_statistics
   - company::welcome
   - finances::account_dyli
+  - finances::entities_dyli
   - help::close
   - help::previous
   - help::search
