--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -26,6 +26,7 @@
 #  creator_id       :integer          
 #  entity_id        :integer          
 #  id               :integer          not null, primary key
+#  language         :string(255)      default("eng"), not null
 #  lock_version     :integer          default(0), not null
 #  locked           :boolean          not null
 #  name             :string(255)      not null
@@ -41,6 +42,7 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   language: "Lorem ipsum"
 #   locked: true
 #   name: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
