--- a/test/fixtures/journal_entries.yml
+++ b/test/fixtures/journal_entries.yml
@@ -20,7 +20,7 @@
 # 
 # == Table: journal_entries
 #
-#  closed          :boolean          
+#  balance         :decimal(16, 2)   default(0.0), not null
 #  company_id      :integer          not null
 #  created_at      :datetime         not null
 #  created_on      :date             not null
@@ -31,16 +31,14 @@
 #  currency_id     :integer          default(0), not null
 #  currency_rate   :decimal(16, 6)   default(0.0), not null
 #  debit           :decimal(16, 2)   default(0.0), not null
-#  draft           :boolean          not null
-#  draft_mode      :boolean          not null
 #  id              :integer          not null, primary key
 #  journal_id      :integer          not null
 #  lock_version    :integer          default(0), not null
 #  number          :string(255)      not null
-#  position        :integer          
 #  printed_on      :date             not null
 #  resource_id     :integer          
 #  resource_type   :string(255)      
+#  state           :string(32)       default("draft"), not null
 #  updated_at      :datetime         not null
 #  updater_id      :integer          
 #
@@ -48,6 +46,7 @@
 # == Fixture: journal_entries
 #
 # journal_entries_001:
+#   balance: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   created_on: 2009-07-19
@@ -58,12 +57,11 @@
 #   currency_id: 1
 #   currency_rate: 0
 #   debit: 0
-#   draft: true
-#   draft_mode: true
 #   id: 1
 #   journal_id: 1
 #   number: "Lorem ipsum"
 #   printed_on: 2009-07-19
+#   state: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -74,18 +72,15 @@ journal_entries_001:
   creator_id: 1
   credit: 0
   debit: 0
-  draft_mode: true
-  draft: true
   id: 1
   journal_id: 1
   number: "XYZ0001"
-  position: 0
   printed_on: 2007-07-20
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
   currency_rate: 1
-
+  state: draft
 
 journal_entries_002:
   company_id: 1
@@ -96,15 +91,13 @@ journal_entries_002:
   debit: 0
   id: 2
   journal_id: 1
-  draft_mode: true
-  draft: true
   number: "XYZ0002"
-  position: 0
   printed_on: 2007-07-25
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
   currency_rate: 1
+  state: draft
 
 journal_entries_003:
   company_id: 1
@@ -115,15 +108,13 @@ journal_entries_003:
   debit: 0
   id: 3
   journal_id: 1
-  draft_mode: true
-  draft: true
   number: "XYZ0003"
-  position: 0
   printed_on: 2007-05-19
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
   currency_rate: 1
+  state: draft
 
 journal_entries_004:
   company_id: 1
@@ -134,13 +125,11 @@ journal_entries_004:
   debit: 0
   id: 4
   journal_id: 1
-  draft_mode: true
-  draft: true
   number: "XYZ0004"
-  position: 0
   printed_on: 2007-01-19
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
   currency_id: 1
   currency_rate: 1
+  state: draft
 
