--- a/test/fixtures/journal_entry_lines.yml
+++ b/test/fixtures/journal_entry_lines.yml
@@ -21,8 +21,8 @@
 # == Table: journal_entry_lines
 #
 #  account_id        :integer          not null
+#  balance           :decimal(16, 2)   default(0.0), not null
 #  bank_statement_id :integer          
-#  closed            :boolean          not null
 #  comment           :text             
 #  company_id        :integer          not null
 #  created_at        :datetime         not null
@@ -31,15 +31,14 @@
 #  currency_credit   :decimal(16, 2)   default(0.0), not null
 #  currency_debit    :decimal(16, 2)   default(0.0), not null
 #  debit             :decimal(16, 2)   default(0.0), not null
-#  draft             :boolean          not null
 #  entry_id          :integer          not null
-#  expired_on        :date             
 #  id                :integer          not null, primary key
 #  journal_id        :integer          
 #  letter            :string(8)        
 #  lock_version      :integer          default(0), not null
 #  name              :string(255)      not null
 #  position          :integer          
+#  state             :string(32)       default("draft"), not null
 #  updated_at        :datetime         not null
 #  updater_id        :integer          
 #
@@ -48,7 +47,7 @@
 #
 # journal_entry_lines_001:
 #   account_id: 1
-#   closed: true
+#   balance: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
@@ -56,10 +55,10 @@
 #   currency_credit: 0
 #   currency_debit: 0
 #   debit: 0
-#   draft: true
 #   entry_id: 1
 #   id: 1
 #   name: "Lorem ipsum"
+#   state: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -72,14 +71,13 @@ journal_entry_lines_001:
   currency_credit: 0
   currency_debit: 0
   debit: 0
-  draft: true
   id: 1
   journal_id: 1
   name: "Lorem ipsum"
   entry_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-
+  state: draft
 
 journal_entry_lines_002:
   account_id: 1
@@ -90,11 +88,11 @@ journal_entry_lines_002:
   currency_credit: 0
   currency_debit: 0
   debit: 0
-  draft: true
   id: 2
   journal_id: 1
   name: "Lorem ipsum 2"
   entry_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  state: draft
 
