--- a/test/fixtures/outgoing_deliveries.yml
+++ b/test/fixtures/outgoing_deliveries.yml
@@ -20,46 +20,46 @@
 # 
 # == Table: outgoing_deliveries
 #
-#  amount            :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes :decimal(16, 2)   default(0.0), not null
-#  comment           :text             
-#  company_id        :integer          not null
-#  contact_id        :integer          
-#  created_at        :datetime         not null
-#  creator_id        :integer          
-#  currency_id       :integer          
-#  id                :integer          not null, primary key
-#  lock_version      :integer          default(0), not null
-#  mode_id           :integer          
-#  moved_on          :date             
-#  number            :string(255)      
-#  planned_on        :date             
-#  reference_number  :string(255)      
-#  sales_invoice_id  :integer          
-#  sales_order_id    :integer          not null
-#  transport_id      :integer          
-#  transporter_id    :integer          
-#  updated_at        :datetime         not null
-#  updater_id        :integer          
-#  weight            :decimal(16, 4)   
+#  amount           :decimal(16, 2)   default(0.0), not null
+#  comment          :text             
+#  company_id       :integer          not null
+#  contact_id       :integer          
+#  created_at       :datetime         not null
+#  creator_id       :integer          
+#  currency_id      :integer          
+#  id               :integer          not null, primary key
+#  lock_version     :integer          default(0), not null
+#  mode_id          :integer          
+#  moved_on         :date             
+#  number           :string(255)      
+#  planned_on       :date             
+#  pretax_amount    :decimal(16, 2)   default(0.0), not null
+#  reference_number :string(255)      
+#  sales_invoice_id :integer          
+#  sales_order_id   :integer          not null
+#  transport_id     :integer          
+#  transporter_id   :integer          
+#  updated_at       :datetime         not null
+#  updater_id       :integer          
+#  weight           :decimal(16, 4)   
 #
 #
 # == Fixture: outgoing_deliveries
 #
 # outgoing_deliveries_001:
 #   amount: 0
-#   amount_with_taxes: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   pretax_amount: 0
 #   sales_order_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 outgoing_deliveries_001:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -72,7 +72,7 @@ outgoing_deliveries_001:
 
 outgoing_deliveries_002:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -85,7 +85,7 @@ outgoing_deliveries_002:
 
 outgoing_deliveries_003:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
