--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -27,10 +27,11 @@
 #  id           :integer          not null, primary key
 #  is_debit     :boolean          not null
 #  label        :string(255)      not null
-#  last_letter  :string(8)        
+#  last_letter  :string(255)      
 #  lock_version :integer          default(0), not null
 #  name         :string(208)      not null
 #  number       :string(16)       not null
+#  reconcilable :boolean          not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
 #
@@ -46,6 +47,7 @@
 #   label: "Lorem ipsum"
 #   name: "Lorem ipsum"
 #   number: "Lorem ipsum"
+#   reconcilable: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
