--- a/test/fixtures/incoming_deliveries.yml
+++ b/test/fixtures/incoming_deliveries.yml
@@ -21,7 +21,6 @@
 # == Table: incoming_deliveries
 #
 #  amount            :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes :decimal(16, 2)   default(0.0), not null
 #  comment           :text             
 #  company_id        :integer          not null
 #  contact_id        :integer          
@@ -34,6 +33,7 @@
 #  moved_on          :date             
 #  number            :string(255)      
 #  planned_on        :date             
+#  pretax_amount     :decimal(16, 2)   default(0.0), not null
 #  purchase_order_id :integer          
 #  reference_number  :string(255)      
 #  updated_at        :datetime         not null
@@ -45,17 +45,17 @@
 #
 # incoming_deliveries_001:
 #   amount: 0
-#   amount_with_taxes: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   pretax_amount: 0
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 incoming_deliveries_001:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -67,7 +67,7 @@ incoming_deliveries_001:
 
 incoming_deliveries_002:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
