--- a/test/fixtures/prices.yml
+++ b/test/fixtures/prices.yml
@@ -20,27 +20,27 @@
 # 
 # == Table: prices
 #
-#  active            :boolean          default(TRUE), not null
-#  amount            :decimal(16, 4)   not null
-#  amount_with_taxes :decimal(16, 4)   not null
-#  by_default        :boolean          default(TRUE)
-#  category_id       :integer          
-#  company_id        :integer          not null
-#  created_at        :datetime         not null
-#  creator_id        :integer          
-#  currency_id       :integer          
-#  entity_id         :integer          
-#  id                :integer          not null, primary key
-#  lock_version      :integer          default(0), not null
-#  product_id        :integer          not null
-#  quantity_max      :decimal(16, 4)   default(0.0), not null
-#  quantity_min      :decimal(16, 4)   default(0.0), not null
-#  started_at        :datetime         
-#  stopped_at        :datetime         
-#  tax_id            :integer          not null
-#  updated_at        :datetime         not null
-#  updater_id        :integer          
-#  use_range         :boolean          not null
+#  active        :boolean          default(TRUE), not null
+#  amount        :decimal(16, 4)   not null
+#  by_default    :boolean          default(TRUE)
+#  category_id   :integer          
+#  company_id    :integer          not null
+#  created_at    :datetime         not null
+#  creator_id    :integer          
+#  currency_id   :integer          
+#  entity_id     :integer          
+#  id            :integer          not null, primary key
+#  lock_version  :integer          default(0), not null
+#  pretax_amount :decimal(16, 4)   not null
+#  product_id    :integer          not null
+#  quantity_max  :decimal(16, 4)   default(0.0), not null
+#  quantity_min  :decimal(16, 4)   default(0.0), not null
+#  started_at    :datetime         
+#  stopped_at    :datetime         
+#  tax_id        :integer          not null
+#  updated_at    :datetime         not null
+#  updater_id    :integer          
+#  use_range     :boolean          not null
 #
 #
 # == Fixture: prices
@@ -48,11 +48,11 @@
 # prices_001:
 #   active: true
 #   amount: 0
-#   amount_with_taxes: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   pretax_amount: 0
 #   product_id: 1
 #   quantity_max: 0
 #   quantity_min: 0
@@ -64,7 +64,7 @@
 prices_001:
   active: true
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -81,7 +81,7 @@ prices_001:
 prices_002:
   active: true
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
