--- a/test/fixtures/purchase_order_lines.yml
+++ b/test/fixtures/purchase_order_lines.yml
@@ -20,26 +20,26 @@
 # 
 # == Table: purchase_order_lines
 #
-#  account_id        :integer          not null
-#  amount            :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes :decimal(16, 2)   default(0.0), not null
-#  annotation        :text             
-#  company_id        :integer          not null
-#  created_at        :datetime         not null
-#  creator_id        :integer          
-#  id                :integer          not null, primary key
-#  lock_version      :integer          default(0), not null
-#  order_id          :integer          not null
-#  position          :integer          
-#  price_id          :integer          not null
-#  product_id        :integer          not null
-#  quantity          :decimal(16, 4)   default(1.0), not null
-#  tracking_id       :integer          
-#  tracking_serial   :string(255)      
-#  unit_id           :integer          not null
-#  updated_at        :datetime         not null
-#  updater_id        :integer          
-#  warehouse_id      :integer          
+#  account_id      :integer          not null
+#  amount          :decimal(16, 2)   default(0.0), not null
+#  annotation      :text             
+#  company_id      :integer          not null
+#  created_at      :datetime         not null
+#  creator_id      :integer          
+#  id              :integer          not null, primary key
+#  lock_version    :integer          default(0), not null
+#  order_id        :integer          not null
+#  position        :integer          
+#  pretax_amount   :decimal(16, 2)   default(0.0), not null
+#  price_id        :integer          not null
+#  product_id      :integer          not null
+#  quantity        :decimal(16, 4)   default(1.0), not null
+#  tracking_id     :integer          
+#  tracking_serial :string(255)      
+#  unit_id         :integer          not null
+#  updated_at      :datetime         not null
+#  updater_id      :integer          
+#  warehouse_id    :integer          
 #
 #
 # == Fixture: purchase_order_lines
@@ -47,12 +47,12 @@
 # purchase_order_lines_001:
 #   account_id: 1
 #   amount: 0
-#   amount_with_taxes: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
 #   order_id: 1
+#   pretax_amount: 0
 #   price_id: 1
 #   product_id: 1
 #   quantity: 0
@@ -63,7 +63,7 @@
 purchase_order_lines_001:
   account_id: 1
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -79,7 +79,7 @@ purchase_order_lines_001:
 purchase_order_lines_002:
   account_id: 1
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -95,7 +95,7 @@ purchase_order_lines_002:
 purchase_order_lines_003:
   account_id: 1
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
