--- a/test/fixtures/sales_invoice_lines.yml
+++ b/test/fixtures/sales_invoice_lines.yml
@@ -20,38 +20,38 @@
 # 
 # == Table: sales_invoice_lines
 #
-#  amount            :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes :decimal(16, 2)   default(0.0), not null
-#  annotation        :text             
-#  company_id        :integer          not null
-#  created_at        :datetime         not null
-#  creator_id        :integer          
-#  entity_id         :integer          
-#  id                :integer          not null, primary key
-#  lock_version      :integer          default(0), not null
-#  order_line_id     :integer          
-#  origin_id         :integer          
-#  position          :integer          
-#  price_id          :integer          not null
-#  product_id        :integer          not null
-#  quantity          :decimal(16, 4)   default(1.0), not null
-#  sales_invoice_id  :integer          
-#  tracking_id       :integer          
-#  unit_id           :integer          
-#  updated_at        :datetime         not null
-#  updater_id        :integer          
-#  warehouse_id      :integer          
+#  amount           :decimal(16, 2)   default(0.0), not null
+#  annotation       :text             
+#  company_id       :integer          not null
+#  created_at       :datetime         not null
+#  creator_id       :integer          
+#  entity_id        :integer          
+#  id               :integer          not null, primary key
+#  lock_version     :integer          default(0), not null
+#  order_line_id    :integer          
+#  origin_id        :integer          
+#  position         :integer          
+#  pretax_amount    :decimal(16, 2)   default(0.0), not null
+#  price_id         :integer          not null
+#  product_id       :integer          not null
+#  quantity         :decimal(16, 4)   default(1.0), not null
+#  sales_invoice_id :integer          
+#  tracking_id      :integer          
+#  unit_id          :integer          
+#  updated_at       :datetime         not null
+#  updater_id       :integer          
+#  warehouse_id     :integer          
 #
 #
 # == Fixture: sales_invoice_lines
 #
 # sales_invoice_lines_001:
 #   amount: 0
-#   amount_with_taxes: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   pretax_amount: 0
 #   price_id: 1
 #   product_id: 1
 #   quantity: 0
