--- a/test/fixtures/sales_order_lines.yml
+++ b/test/fixtures/sales_order_lines.yml
@@ -22,7 +22,6 @@
 #
 #  account_id          :integer          not null
 #  amount              :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes   :decimal(16, 2)   default(0.0), not null
 #  annotation          :text             
 #  company_id          :integer          not null
 #  created_at          :datetime         not null
@@ -34,6 +33,7 @@
 #  lock_version        :integer          default(0), not null
 #  order_id            :integer          not null
 #  position            :integer          
+#  pretax_amount       :decimal(16, 2)   default(0.0), not null
 #  price_amount        :decimal(16, 2)   
 #  price_id            :integer          not null
 #  product_id          :integer          not null
@@ -53,13 +53,13 @@
 # sales_order_lines_001:
 #   account_id: 1
 #   amount: 0
-#   amount_with_taxes: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
 #   invoiced: true
 #   order_id: 1
+#   pretax_amount: 0
 #   price_id: 1
 #   product_id: 1
 #   quantity: 0
@@ -71,7 +71,7 @@
 sales_order_lines_001:
   account_id: 1
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -88,7 +88,7 @@ sales_order_lines_001:
 sales_order_lines_002:
   account_id: 1
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -105,7 +105,7 @@ sales_order_lines_002:
 sales_order_lines_003:
   account_id: 1
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -122,7 +122,7 @@ sales_order_lines_003:
 sales_order_lines_004:
   account_id: 1
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
