--- a/test/fixtures/sales_orders.yml
+++ b/test/fixtures/sales_orders.yml
@@ -22,7 +22,6 @@
 #
 #  accounted_at        :datetime         
 #  amount              :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes   :decimal(16, 2)   default(0.0), not null
 #  annotation          :text             
 #  client_id           :integer          not null
 #  comment             :text             
@@ -50,6 +49,7 @@
 #  number              :string(64)       not null
 #  paid_amount         :decimal(16, 2)   
 #  payment_delay_id    :integer          not null
+#  pretax_amount       :decimal(16, 2)   default(0.0), not null
 #  reference_number    :string(255)      
 #  responsible_id      :integer          
 #  state               :string(64)       default("O"), not null
@@ -64,7 +64,6 @@
 #
 # sales_orders_001:
 #   amount: 0
-#   amount_with_taxes: 0
 #   client_id: 1
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
@@ -79,6 +78,7 @@
 #   nature_id: 1
 #   number: "Lorem ipsum"
 #   payment_delay_id: 1
+#   pretax_amount: 0
 #   state: "Lorem ipsum"
 #   sum_method: "Lorem ipsum"
 #   updated_at: 2009-07-19 19:13:59 +02:00
@@ -86,7 +86,7 @@
 #
 sales_orders_001:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   client_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
@@ -108,7 +108,7 @@ sales_orders_001:
 
 sales_orders_002:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   client_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
@@ -130,7 +130,7 @@ sales_orders_002:
 
 sales_orders_003:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   client_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
