--- a/test/fixtures/transports.yml
+++ b/test/fixtures/transports.yml
@@ -21,7 +21,6 @@
 # == Table: transports
 #
 #  amount            :decimal(16, 2)   default(0.0), not null
-#  amount_with_taxes :decimal(16, 2)   default(0.0), not null
 #  comment           :text             
 #  company_id        :integer          not null
 #  created_at        :datetime         not null
@@ -30,6 +29,7 @@
 #  id                :integer          not null, primary key
 #  lock_version      :integer          default(0), not null
 #  number            :string(255)      
+#  pretax_amount     :decimal(16, 2)   default(0.0), not null
 #  purchase_order_id :integer          
 #  reference_number  :string(255)      
 #  responsible_id    :integer          
@@ -44,18 +44,18 @@
 #
 # transports_001:
 #   amount: 0
-#   amount_with_taxes: 0
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   pretax_amount: 0
 #   transporter_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
 transports_001:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -66,7 +66,7 @@ transports_001:
 
 transports_002:
   amount: 0
-  amount_with_taxes: 0
+  pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
