--- a/test/fixtures/sales_orders.yml
+++ b/test/fixtures/sales_orders.yml
@@ -32,23 +32,29 @@
 #  created_at          :datetime         not null
 #  created_on          :date             not null
 #  creator_id          :integer          
+#  credit              :boolean          not null
 #  currency_id         :integer          
 #  delivery_contact_id :integer          
 #  downpayment_amount  :decimal(16, 2)   default(0.0), not null
-#  expiration_id       :integer          not null
-#  expired_on          :date             not null
+#  expiration_id       :integer          
+#  expired_on          :date             
 #  function_title      :string(255)      
 #  has_downpayment     :boolean          not null
 #  id                  :integer          not null, primary key
+#  initial_number      :string(64)       
 #  introduction        :text             
 #  invoice_contact_id  :integer          
+#  invoiced_on         :date             
 #  journal_entry_id    :integer          
 #  letter_format       :boolean          default(TRUE), not null
 #  lock_version        :integer          default(0), not null
-#  nature_id           :integer          not null
+#  lost                :boolean          not null
+#  nature_id           :integer          
 #  number              :string(64)       not null
-#  paid_amount         :decimal(16, 2)   
+#  origin_id           :integer          
+#  paid_amount         :decimal(16, 2)   not null
 #  payment_delay_id    :integer          not null
+#  payment_on          :date             
 #  pretax_amount       :decimal(16, 2)   default(0.0), not null
 #  reference_number    :string(255)      
 #  responsible_id      :integer          
@@ -69,14 +75,14 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   created_on: 2009-07-19
 #   creator_id: 1
+#   credit: true
 #   downpayment_amount: 0
-#   expiration_id: 1
-#   expired_on: 2009-07-19
 #   has_downpayment: true
 #   id: 1
 #   letter_format: true
-#   nature_id: 1
+#   lost: true
 #   number: "Lorem ipsum"
+#   paid_amount: 0
 #   payment_delay_id: 1
 #   pretax_amount: 0
 #   state: "Lorem ipsum"
@@ -100,6 +106,7 @@ sales_orders_001:
   letter_format: true
   nature_id: 1
   number: "SO123456"
+  paid_amount: 0.0
   payment_delay_id: 1
   state: "draft"
   sum_method: "wt"
@@ -122,6 +129,7 @@ sales_orders_002:
   letter_format: true
   nature_id: 1
   number: "SO123457"
+  paid_amount: 0.0
   payment_delay_id: 1
   state: "draft"
   sum_method: "wt"
@@ -144,6 +152,7 @@ sales_orders_003:
   letter_format: true
   nature_id: 1
   number: "SO123457"
+  paid_amount: 0.0
   payment_delay_id: 1
   state: "processing"
   sum_method: "wt"
