--- a/test/fixtures/purchase_orders.yml
+++ b/test/fixtures/purchase_orders.yml
@@ -95,7 +95,7 @@ purchase_orders_003:
   creator_id: 1
   id: 3
   number: "P000001"
-  state: "processing"
+  state: "order"
   supplier_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
