--- a/test/fixtures/sales_orders.yml
+++ b/test/fixtures/sales_orders.yml
@@ -137,8 +137,8 @@ sales_orders_002:
   updater_id: 1
 
 sales_orders_003:
-  amount: 0
-  pretax_amount: 0
+  amount: 10
+  pretax_amount: 10
   client_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
@@ -154,7 +154,7 @@ sales_orders_003:
   number: "SO123457"
   paid_amount: 0.0
   payment_delay_id: 1
-  state: "processing"
+  state: "order"
   sum_method: "wt"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
