--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -31,6 +31,7 @@
 #  created_at                 :datetime         not null
 #  creator_id                 :integer          
 #  critic_quantity_min        :decimal(16, 4)   default(1.0)
+#  deliverable                :boolean          not null
 #  description                :text             
 #  ean13                      :string(13)       
 #  for_immobilizations        :boolean          not null
@@ -40,7 +41,6 @@
 #  id                         :integer          not null, primary key
 #  immobilizations_account_id :integer          
 #  lock_version               :integer          default(0), not null
-#  manage_stocks              :boolean          not null
 #  name                       :string(255)      not null
 #  nature                     :string(8)        not null
 #  number                     :integer          not null
@@ -52,9 +52,11 @@
 #  reduction_submissive       :boolean          not null
 #  sales_account_id           :integer          
 #  service_coeff              :decimal(16, 4)   
+#  stockable                  :boolean          not null
 #  subscription_nature_id     :integer          
 #  subscription_period        :string(255)      
 #  subscription_quantity      :integer          
+#  trackable                  :boolean          not null
 #  unit_id                    :integer          not null
 #  unquantifiable             :boolean          not null
 #  updated_at                 :datetime         not null
@@ -72,17 +74,19 @@
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   deliverable: true
 #   for_immobilizations: true
 #   for_productions: true
 #   for_purchases: true
 #   for_sales: true
 #   id: 1
-#   manage_stocks: true
 #   name: "Lorem ipsum"
 #   nature: "Lorem ipsum"
 #   number: 0
 #   published: true
 #   reduction_submissive: true
+#   stockable: true
+#   trackable: true
 #   unit_id: 1
 #   unquantifiable: true
 #   updated_at: 2009-07-19 19:13:59 +02:00
@@ -97,7 +101,7 @@ products_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  manage_stocks: true
+  stockable: true
   name: "Lorem ipsum"
   nature: "product"
   number: 0
@@ -118,7 +122,7 @@ products_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  manage_stocks: true
+  stockable: true
   name: "Lorem ipsum 2"
   nature: "product"
   number: 0
@@ -139,7 +143,7 @@ products_003:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
-  manage_stocks: true
+  stockable: true
   name: "Lorem ipsum 3"
   nature: "product"
   number: 0
