--- a/test/fixtures/stock_moves.yml
+++ b/test/fixtures/stock_moves.yml
@@ -20,29 +20,27 @@
 # 
 # == Table: stock_moves
 #
-#  comment             :text             
-#  company_id          :integer          not null
-#  created_at          :datetime         not null
-#  creator_id          :integer          
-#  generated           :boolean          
-#  id                  :integer          not null, primary key
-#  lock_version        :integer          default(0), not null
-#  moved_on            :date             
-#  name                :string(255)      not null
-#  origin_id           :integer          
-#  origin_type         :string(255)      
-#  planned_on          :date             not null
-#  product_id          :integer          not null
-#  quantity            :decimal(16, 4)   not null
-#  second_move_id      :integer          
-#  second_warehouse_id :integer          
-#  stock_id            :integer          
-#  tracking_id         :integer          
-#  unit_id             :integer          not null
-#  updated_at          :datetime         not null
-#  updater_id          :integer          
-#  virtual             :boolean          
-#  warehouse_id        :integer          not null
+#  comment      :text             
+#  company_id   :integer          not null
+#  created_at   :datetime         not null
+#  creator_id   :integer          
+#  generated    :boolean          not null
+#  id           :integer          not null, primary key
+#  lock_version :integer          default(0), not null
+#  moved_on     :date             
+#  name         :string(255)      not null
+#  origin_id    :integer          
+#  origin_type  :string(255)      
+#  planned_on   :date             not null
+#  product_id   :integer          not null
+#  quantity     :decimal(16, 4)   not null
+#  stock_id     :integer          
+#  tracking_id  :integer          
+#  unit_id      :integer          not null
+#  updated_at   :datetime         not null
+#  updater_id   :integer          
+#  virtual      :boolean          
+#  warehouse_id :integer          not null
 #
 #
 # == Fixture: stock_moves
@@ -51,6 +49,7 @@
 #   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   generated: true
 #   id: 1
 #   name: "Lorem ipsum"
 #   planned_on: 2009-07-19
