Fixes the acts_as_stockable extension
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1713 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/rights.yml
+++ b/config/rights.yml
@@ -776,9 +776,9 @@ manage_stock_moves:
   - stock_transfer_delete
   - stock_transfer_update
   - stock_transfers
+  - stock_transfers_confirm
+  - stock_transfers_confirm_kame
   - stock_transfers_kame
-  - unexecuted_transfers
-  - unexecuted_transfers_kame
 # Manage subscriptions
 manage_subscriptions:
   controller: management
