--- a/test/fixtures/stock_moves.yml
+++ b/test/fixtures/stock_moves.yml
@@ -39,7 +39,7 @@
 #  unit_id      :integer          not null
 #  updated_at   :datetime         not null
 #  updater_id   :integer          
-#  virtual      :boolean          
+#  virtual      :boolean          not null
 #  warehouse_id :integer          not null
 #
 #
@@ -58,6 +58,7 @@
 #   unit_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
+#   virtual: true
 #   warehouse_id: 1
 #
 stock_moves_001:
@@ -73,6 +74,7 @@ stock_moves_001:
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  virtual: true
 
 stock_moves_002:
   company_id: 1
@@ -87,4 +89,5 @@ stock_moves_002:
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+  virtual: true
 
