--- a/config-3/Gemfile
+++ b/config-3/Gemfile
@@ -1,7 +1,7 @@
 source 'http://rubygems.org'
 
 gem 'rails', '3.0.3'
-# gem 'rails', '2.3.10'
+gem "i18n", "0.4.2"
 gem 'haml', '~>3.0'
 gem 'fastercsv', :platforms=>[:ruby_18, :mri_18]
 gem 'libxml-ruby', '1.1.3', :require=>'libxml'
