Fixes master bugs for Rails 2 support with Rails 3 compat
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1725 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-2/Gemfile
+++ b/config-2/Gemfile
@@ -1,4 +1,4 @@
-source "http://rubygems.org"
+source :gemcutter # "http://rubygems.org"
 
 gem "rails", "2.3.10"
 gem "i18n", "0.4.2"
@@ -14,7 +14,7 @@ gem "state_machine", :path => "vendor/ogems/state_machine-0.9.4"
 # gem "ruby-debug"
 
 group :test do
-  gem "thoughtbot-shoulda", :require => "shoulda"
+  gem "shoulda" # , "2.10.3", :require => "shoulda"
 end  
 
 # gem "sqlite3-ruby", :require => "sqlite3", :platforms=>[:ruby_19, :mri_19]
