Fixes little bugs due to migration on rails 2
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1743 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config-3/rights.yml
+++ b/config-3/rights.yml
@@ -765,6 +765,7 @@ manage_sales:
   - sale_deliveries_kame
   - sale_invoice
   - sale_propose
+  - sale_propose_and_invoice
   - sale_refuse
   - sale_undelivered_lines_kame
 # Manage stock moves
