--- a/test/fixtures/sale_lines.yml
+++ b/test/fixtures/sale_lines.yml
@@ -125,3 +125,17 @@ sale_lines_004:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
+sale_lines_005:
+  amount: 10
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 5
+  pretax_amount: 10
+  price_id: 1
+  product_id: 1
+  quantity: 5
+  reduction_percent: 0
+  sale_id: 4
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
