--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -159,3 +159,24 @@ sales_003:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
+sales_004:
+  amount: 10
+  client_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2009-07-19
+  creator_id: 1
+  credit: false
+  downpayment_amount: 0
+  has_downpayment: false
+  id: 4
+  letter_format: true
+  lost: false
+  number: "SO7894582"
+  paid_amount: 0
+  payment_delay_id: 1
+  pretax_amount: 10
+  state: "draft"
+  sum_method: "wt"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
