--- a/installer/debian/Rakefile
+++ b/installer/debian/Rakefile
@@ -41,7 +41,7 @@ task :build do
   options = {:homepage=>"http://www.ekylibre.org", :maintainer=>"Brice Texier", :description=>"Simple ERP for little business", :section=>:web}
 
 
-  DebianPackage.generate(application, version, options.merge(:depends=>"ruby (>=1.8.7), rubygems (>=1.3.7), ruby-dev (>=1.8.7), apache2 (>=2.2.4)",
+  DebianPackage.generate(application, version, options.merge(:depends=>"ruby (>=1.8.7), rubygems (>=1.3.7), ruby-dev (>=1.8.7), apache2 (>=2.2.4), libapache2-mod-passenger",
                                                              :recommends=>"postgresql (>=8.3)")) do |dp|
 
     dp.copy("ekylibre", "@/usr/share/ekylibre")
