--- a/installer/source/build
+++ b/installer/source/build
@@ -6,21 +6,21 @@ log=$3
 source=${app}-${version}-source
 
 if [ -n "`which zip`" ]; then
-    echo "   * Zip source" >> $log
+    echo " * Zip source" >> $log
     zip -r    ${source}.zip ${app} -x "*.svn*" >> $log
 else
-    echo "   * No zip command"
-    echo "   * No zip command" >> $log
+    echo " * No zip command. Run 'apt-get install zip'"
+    echo " * No zip command. Run 'apt-get install zip'" >> $log
 fi
 
 if [ -n "`which tar`" ]; then
-    echo "   * Gzip source" >> $log
+    echo " * Gzip source" >> $log
     tar cfvhz ${source}.tar.gz  --exclude=.svn ${app} >> $log
-    echo "   * Bzip source" >> $log
+    echo " * Bzip source" >> $log
     tar cfvhj ${source}.tar.bz2 --exclude=.svn ${app} >> $log
 else
-    echo "   * No tar command"
-    echo "   * No tar command" >> $log
+    echo " * No tar command. Run 'apt-get install tar'"
+    echo " * No tar command. Run 'apt-get install tar'" >> $log
 fi
 
 mkdir packages
