--- a/installer/win32/build
+++ b/installer/win32/build
@@ -6,19 +6,19 @@ resdir=$4
 
 release=${app}-${version}
 
+rm -fr packages
+mkdir -p packages
+
 if [ -n "`which makensis`" ]; then
     files="files"
     rm -fr ${files}
     mkdir -p ${files}/apps
-    ln -s ${app} ${files}/apps/${app}
+    ln -s `pwd`/${app} ${files}/apps/${app}
     ln -s ${resdir}/* ${files}/
-    echo " * Start packaging with NSIS at `date`" >> $log
     makensis -DRELEASE=${release} -DVERSION=${version} -DRESOURCES=${files} -DIMAGES=images installer.nsi >> $log
-    echo " * Finish packaging with NSIS at `date`" >> $log
+    # rm -fr ${files}
 else
     echo " * No makensis command. Run 'apt-get install nsis'"
     echo " * No makensis command. Run 'apt-get install nsis'" >> $log
 fi
 
-mkdir -p packages
-# mv ${current_dir}/windows/${release}.exe packages/
