--- a/installer/debian/debian/control
+++ b/installer/debian/debian/control
@@ -9,7 +9,8 @@ Homepage: http://www.ekylibre.org
 Package: ekylibre
 Architecture: all
 Depends: ruby1.8 (>=1.8.7), rubygems (>=1.3.7), ruby-dev (>=1.8.7), libxml2-dev, libpq-dev, apache2 (>=2.2.4), libapache2-mod-passenger, postgresql (>=8.3), zlib1g-dev
-Suggests: ruby (>=1.8.7)
+Recommends: ruby (>=1.8.7)
+Suggests: ttf-liberation
 Description: simple ERP for little businesses
  Ekylibre is a simple ERP for little businesses. Ekylibre can manage companies,
  users, rights, CRM, general accounting, sales, pruchases, stocks and 
