--- a/installer/win32/build
+++ b/installer/win32/build
@@ -28,7 +28,7 @@ if [ -n "`which makensis`" ]; then
     ln -s `pwd`/${app} ${files}/apps/${app}
     ln -s ${resdir}/* ${files}/
     makensis -DRELEASE=${release} -DVERSION=${version} -DRESOURCES=${files} -DIMAGES=images installer.nsi >> $log
-    # rm -fr ${files}
+    rm -fr ${files}
 else
     echo " * No makensis command. Run 'apt-get install nsis'"
     echo " * No makensis command. Run 'apt-get install nsis'" >> $log
