Adds missing translation
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1776 67a09383-3dfa-4221-8551-890bac9c277c

--- a/installer/debian/build
+++ b/installer/debian/build
@@ -45,7 +45,7 @@ find copy -name .svn* -print0 | xargs -0 rm -rf
 find copy -name .git* -print0 | xargs -0 rm -rf
 find copy -name "*~"  -print0 | xargs -0 rm -rf
 find copy -name "#*#" -print0 | xargs -0 rm -rf
-rm copy/config/database.yml
+rm -f copy/config/database.yml
 
 
 cd $root
