Chnage Apache configuration for debian package
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1788 67a09383-3dfa-4221-8551-890bac9c277c

--- a/installer/debian/apache.conf
+++ b/installer/debian/apache.conf
@@ -1,7 +1,7 @@
 RailsAutoDetect Off
-<Directory /var/www>
-        Options FollowSymLinks
+RailsBaseURI /ekylibre
+<Directory /var/www/ekylibre>
+        Options FollowSymLinks -MultiViews
 	Allow from all
-	RailsBaseURI /ekylibre
 	PassengerAppRoot /usr/share/ekylibre
 </Directory>
